# edgeful-dash

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/dashboard/: SKILL.md
.claude/skills/dashboard/references/: chart-recipes.md  design-tokens.md  layout-patterns.md
.github/workflows/: test.yml
docs/: development.md  usage.md
docs/superpowers/plans/: 2026-06-17-edgeful-cli.md
docs/superpowers/specs/: 2026-06-17-edgeful-cli-design.md
src/edgeful_dash/: __init__.py  cli.py  client.py  errors.py  live.py  reports.py
tests/: test_cli.py  test_client.py  test_live.py  test_reports.py
