[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edgeful-dash"
version = "0.1.0"
description = "A small, testable CLI for the Edgeful API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "python-dotenv>=1,<2",
]

[project.scripts]
edgeful-dash = "edgeful_dash.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
